syntax = "proto3";

option go_package = ".;speakingExam";

package speakingExam;

import "google/protobuf/timestamp.proto";


service TaskService {
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

message ListTasksRequest {
  string type = 1;
  int64 exam_id = 2;
}

message ListTasksResponse {
  repeated Task task = 1;
}

message Task {
  int64 id = 1;
  int64 exam_id = 2;
  string text_obj_key = 3;
  string image_obj_key = 4;
  string audio_obj_key = 5;
  int64 ms_before_starting = 6;
  int64 ms_preparing = 7;
  int64 ms_recording = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}